--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,9 +1,15 @@
+/* vendor */
+@import 'https://fonts.googleapis.com/css?family=Raleway:300';
 @import "normalize.css";
 
-:root {
-  --color-white: #fff;
-}
+/* base */
+@import "base/colours.css";
+@import "base/typography.css";
+@import "base/base.css";
+@import "base/utilities.css";
+@import "base/layout.css";
 
-body {
-  background-color: var(--color-white);
-}
+/* modules */
+@import "modules/button.css";
+@import "modules/postbox.css";
+@import "modules/page-header.css";
