Position devices to create a composition
We are positioning the images inside an SVG element so that we can scale the
scene proportionally on different screen sizes.

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -13,3 +13,5 @@
 @import "modules/button.css";
 @import "modules/postbox.css";
 @import "modules/page-header.css";
+@import "modules/preview-canvas.css";
+@import "modules/scene.css";
