Add animated gears for loading state
Using Snap SVG we are animating the gears while the screenshots are loading.
We also disable the input and submit button during this time so you cannot
submit again until the screenshots are done.

--- a/web/static/css/base/colours.css
+++ b/web/static/css/base/colours.css
@@ -1,2 +1,6 @@
 $color-black: #3a3a3a;
-$color-purple: #724488;
+$color-light-grey: #eee;
+$color-dark-grey: #999;
+$color-purple: #4e3275;
+$color-pink: #984ba5;
+$color-pink-darker: color(#984ba5 lightness(- 5%));
