--- a/web/static/css/modules/page-header.css
+++ b/web/static/css/modules/page-header.css
@@ -1,8 +1,23 @@
 .m-page-header {
-  background-image: url("/images/header-bg.png");
+  position: relative;
+  background-color: $color-purple;
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
+
+  .l-content {
+    position: relative;
+    z-index: 1;
+  }
+}
+
+.m-page-header__gears {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.15;
 }
 
 .m-page-header__title {
