--- a/web/static/css/modules/postbox.css
+++ b/web/static/css/modules/postbox.css
@@ -1,12 +1,34 @@
 .m-postbox {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
-  justify-content: center;
   @mixin font_size_three;
 
   .a-button {
     margin-top: 16px;
+  }
+}
+
+.m-postbox__fieldset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+
+  [role="group"] {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    justify-content: center;
+  }
+
+  &:disabled {
+    .m-postbox__input {
+      background-color: $color-light-grey;
+      color: $color-dark-grey;
+      cursor: not-allowed;
+    }
+
+    .a-button {
+      opacity: 0.65;
+      cursor: not-allowed;
+    }
   }
 }
 
@@ -16,4 +38,9 @@
   margin-right: 16px;
   padding: 0.5em;
   border: 0;
+
+  &:focus {
+    outline: 1px solid $color-pink;
+    outline-offset: 0;
+  }
 }
