--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -13,8 +13,8 @@
 
   <body>
     <div class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <span class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></span>
+      <span class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></span>
 
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
