Add google analytics
To have a better idea of how the site is being
used add in google analytics.

We also manually track when a screenshot is generated.

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -19,6 +19,8 @@
 
     <title>Responsive Mockr</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+
+    <%= render Mockup.SharedView, "ga.html" %>
   </head>
 
   <body>
