--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,12 +12,12 @@
     <link rel="manifest" href="images/favicon/manifest.json">
     <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#4e3275">
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Responsive Mockr">
-    <meta name="application-name" content="Responsive Mockr">
+    <meta name="apple-mobile-web-app-title" content="Responsive Mokkr">
+    <meta name="application-name" content="Responsive Mokkr">
     <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
     <meta name="theme-color" content="#4e3275">
 
-    <title>Responsive Mockr</title>
+    <title>Responsive Mokkr</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
 
     <%= render Mockup.SharedView, "ga.html" %>
