--- a/web/static/css/base/colours.css
+++ b/web/static/css/base/colours.css
@@ -1,6 +1,8 @@
 $color-black: #3a3a3a;
+$color-white: #fff;
 $color-white-smoke: #f7f7f7;
 $color-light-grey: #eee;
+$color-medium-grey: #ccc;
 $color-dark-grey: #999;
 $color-purple: #4e3275;
 $color-pink: #984ba5;
